--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>web实例</h1>
-    <a href="https://fishc-2guxuj4f806e70bb-1309266525.tcloudbaseapp.com/%E7%AE%80%E5%8E%86/" target="_blank">简历</a>
+    <a href="./简历/index.html" target="_blank">简历</a>
     <h2>第一讲</h2>
     <a href="https://fishc-2guxuj4f806e70bb-1309266525.tcloudbaseapp.com/lesson1/" target="_blank">案例一</a>
     <h2>第二讲</h2>
